Makes overflow:hidden opt-in to fix bad things

--- a/src/css/modules/design-tokens/grid.css
+++ b/src/css/modules/design-tokens/grid.css
@@ -114,10 +114,13 @@ html {
 }
 
 .standard-restricted-width {
-  overflow: hidden;
   margin-left: auto;
   margin-right: auto;
   max-width: var(--g-max-width);
+}
+
+.standard-overflow-hidden {
+  overflow: hidden;
 }
 
 .g-section-vertical {
